// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
  >
    <div
      class="cwy4o5b soui-tag-wrapper"
    >
      <span>
        Default
      </span>
    </div>
  </div>
  <div
    class="cu9hxs6 soui-tag-tag cersmf6 soui-tag-info c-dgisz6 soui-tag-bright"
  >
    <div
      class="cwy4o5b soui-tag-wrapper"
    >
      <span>
        Info
      </span>
    </div>
  </div>
  <div
    class="cu9hxs6 soui-tag-tag c-crovex soui-tag-danger c-dgisz6 soui-tag-bright"
  >
    <div
      class="cwy4o5b soui-tag-wrapper"
    >
      <span>
        Danger
      </span>
    </div>
  </div>
  <div
    class="cu9hxs6 soui-tag-tag cp5o6ko soui-tag-warning c-dgisz6 soui-tag-bright"
  >
    <div
      class="cwy4o5b soui-tag-wrapper"
    >
      <span>
        Warning
      </span>
    </div>
  </div>
  <div
    class="cu9hxs6 soui-tag-tag c-obgj0x soui-tag-success c-dgisz6 soui-tag-bright"
  >
    <div
      class="cwy4o5b soui-tag-wrapper"
    >
      <span>
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cu9hxs6 soui-tag-tag c-hjk5ev soui-tag-tangerine c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag ck9q2qd soui-tag-magenta c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-6s2s1c soui-tag-purple c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-a7hs2i soui-tag-indigo c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cerp0jb soui-tag-cyan c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cervmwa soui-tag-neon c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cvsgrdr soui-tag-lemon c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cvn75ya soui-tag-brown c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cu9hxs6 soui-tag-tag c-hjk5ev soui-tag-tangerine cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag ck9q2qd soui-tag-magenta cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-6s2s1c soui-tag-purple cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-a7hs2i soui-tag-indigo cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cerp0jb soui-tag-cyan cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cervmwa soui-tag-neon cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cvsgrdr soui-tag-lemon cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cvn75ya soui-tag-brown cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cu9hxs6 soui-tag-tag c-hjk5ev soui-tag-tangerine c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag ck9q2qd soui-tag-magenta c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-6s2s1c soui-tag-purple c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-a7hs2i soui-tag-indigo c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cerp0jb soui-tag-cyan c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cervmwa soui-tag-neon c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cvsgrdr soui-tag-lemon c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cvn75ya soui-tag-brown c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cu9hxs6 soui-tag-tag c-hjk5ev soui-tag-tangerine cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Tangerine
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag ck9q2qd soui-tag-magenta cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Magenta
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-6s2s1c soui-tag-purple cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Purple
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-a7hs2i soui-tag-indigo cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Indigo
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cerp0jb soui-tag-cyan cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Cyan
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cervmwa soui-tag-neon cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Neon
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cvsgrdr soui-tag-lemon cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Lemon
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cvn75ya soui-tag-brown cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Brown
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cersmf6 soui-tag-info c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-crovex soui-tag-danger c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cp5o6ko soui-tag-warning c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-obgj0x soui-tag-success c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cersmf6 soui-tag-info cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-crovex soui-tag-danger cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cp5o6ko soui-tag-warning cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-obgj0x soui-tag-success cerqlw7 soui-tag-fill"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cersmf6 soui-tag-info c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-crovex soui-tag-danger c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cp5o6ko soui-tag-warning c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-obgj0x soui-tag-success c-bqfa4y soui-tag-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cersmf6 soui-tag-info cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Info
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-crovex soui-tag-danger cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Danger
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cp5o6ko soui-tag-warning cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Warning
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag c-obgj0x soui-tag-success cqxflhw soui-tag-bright-outline"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Success
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cu9hxs6 soui-tag-tag cvwg6gj soui-tag-small cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Small
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Default
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cvseaxz soui-tag-large cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <span>
          Large
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="cu9hxs6 soui-tag-tag cvwg6gj soui-tag-small cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <div
          class="c-n65lg3 soui-tag-container"
        >
          <span>
            Small
          </span>
        </div>
      </div>
      <div
        class="c-ocxryb soui-tag-close-icon"
      >
        <span
          class="ccwxnkm soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <div
          class="c-n65lg3 soui-tag-container"
        >
          <span>
            Default
          </span>
        </div>
      </div>
      <div
        class="c-ocxryb soui-tag-close-icon"
      >
        <span
          class="ccwxnkm soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cvseaxz soui-tag-large cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <div
          class="c-n65lg3 soui-tag-container"
        >
          <span>
            Large
          </span>
        </div>
      </div>
      <div
        class="c-ocxryb soui-tag-close-icon"
      >
        <span
          class="ccwxnkm soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <div
          class="c-n65lg3 soui-tag-container"
        >
          <span>
            Tag 1
          </span>
        </div>
      </div>
      <div
        class="c-ocxryb soui-tag-close-icon"
      >
        <span
          class="ccwxnkm soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <div
          class="c-n65lg3 soui-tag-container"
        >
          <span>
            Tag 2
          </span>
        </div>
      </div>
      <div
        class="c-ocxryb soui-tag-close-icon"
      >
        <span
          class="ccwxnkm soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright c-57nk4w soui-tag-disabled"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <div
          class="c-n65lg3 soui-tag-container"
        >
          <span>
            Tag 3
          </span>
        </div>
      </div>
      <div
        class="c-ocxryb soui-tag-close-icon"
      >
        <span
          class="ccwxnkm soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default c-bqfa4y soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <div
        class="cwy4o5b soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-inline-end: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
  >
    <div
      class="cwy4o5b soui-tag-wrapper"
    >
      <div
        class="c-n65lg3 soui-tag-container"
      >
        <span>
          Abc
        </span>
      </div>
    </div>
    <div
      class="c-ocxryb soui-tag-close-icon"
    >
      <span
        class="ccwxnkm soui-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="cu9hxs6 soui-tag-tag cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
  >
    <div
      class="cwy4o5b soui-tag-wrapper"
    >
      <span>
        Default
      </span>
    </div>
  </div>
  <div
    class="cu9hxs6 soui-tag-tag cth2st5 soui-tag-rounded cw3xwq5 soui-tag-default c-dgisz6 soui-tag-bright"
  >
    <div
      class="cwy4o5b soui-tag-wrapper"
    >
      <span>
        Rounded
      </span>
    </div>
  </div>
</div>
`;
